--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "elm-test": "^0.19.1-revision12"
   },
   "dependencies": {
-    "elm-doc-preview": "^5.0.5"
+    "elm-doc-preview": "^5.0.5",
+    "elm-verify-examples": "^6.0.3"
   }
 }
